# proverb-pro

./: .gitignore  README.md  default.nix  proverb_bot.py  proverb_pro.py  pyproject.toml  requirements.txt  setup.py  sprueche_mit_bilder.py
proverb_pro/: __init__.py  bot.py  cli.py  generator.py
