[tool.poetry]
name = "proverb-pro"
version = "0.3.0"
description = "Proverb generator"
authors = ["Kierán Meinhardt <kmein@posteo.de>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
Pillow = "^8.2.0"

[tool.poetry.scripts]
proverb-pro = 'proverb_pro.cli:run'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
